# vscode-gcov-visualization

./: .gitignore  CHANGELOG.md  README.md  azure-pipelines.yml  package-lock.json  package.json
src/: configReader.ts  coverage.ts  decorator.ts  extension.ts  filehandler.ts  reportCreator.ts  validation.ts
src/test/suite/: _reportCreator.test.ts  coverage.test.ts  decorator.test.ts  extension.test.ts  filehandler.test.ts  reportCreator.test.ts  validation.test.ts
src/test/suite/additional/: testfiles.ts
src/test/suite/fake/: fakes.ts
src/test/suite/testfiles/: CMakeLists.txt
src/test/suite/testfiles/reports/: main.cpp.gcov
src/test/suite/testfiles/src/: main.cpp  noGcovFile.cpp
src/test/suite/unittest_includes/: fakes.ts  testhelper.ts
